fix(family): logo paw visible on olive topbar

--- a/src/css/family.scss
+++ b/src/css/family.scss
@@ -35,6 +35,7 @@
     height: 42px;
     font-size: 0;
     filter: none;
+    color: var(--cream-text);
   }
   .tbar__title {
     font-family: var(--font-display);
